commit 15053ebb820a9b7953acbb0a1aee8649d4e85b20
Date:   Fri Apr 24 18:13:13 2015 +0300

    Introduced the Python lgging functions - still need testing.
    
    Wrote up some documentation on bi-directional architecture for
    Python and Mt4.

commit 26337dfe123a7adb7fb60104cd3d560c45c3b808
Date:   Wed Apr 22 14:44:21 2015 +0300

    Implemented the return REQ/REP channel for testing the sending
    of commands to Mt4 from OTZmqRequest.py. It's not wired up
    to ProcessCmd yet - which is next to do..
    
    That's the good news; the bad news is that it's crashing Mt4.

commit c8874d7ea0fa5c4b07789ae157a0e2e0041d20fb
Date:   Wed Apr 22 01:26:39 2015 +0300

    Added some intro documentation on PyZmq:
    share/doc/05PyZmq.txt

commit 5e7cfb413165f2304aad2065e59d716c4a2d5e81
Date:   Tue Apr 21 19:42:44 2015 +0300

    You can now run ZeroMQ on Python under Mt4.
    Install pyzmq into your Python, and you can use ZeroMQ.
    
    The beginings of a test is in
    MQL4/Experts/OTMql4/OTPyTestZmqEA.mq4
    More examples and documentayion will follow.

commit c7695bc6184231f53711875a4ba3506d881cc595
Date:   Mon Apr 20 14:59:06 2015 +0300

    Broke the Python code out into a module.
    MQL4/Python/OTMql427.py  ->  MQL4/Python/OTMql427/__init__.py

commit 63400f9b73f2b3c6d14a83574d8dd1a6a132b697
Date:   Mon Apr 20 10:05:06 2015 +0300

    Compiled MQL4/Libraries/OTMql4/py27.dll from our source.

commit c0e17d6a7c8bed16a770ef9cb14b853aad4c7f97
Date:   Thu Apr 16 21:01:50 2015 +0300

    Compiled new py27.dll from our source.
    
    Old dll is now py27.dll.bak.

commit 7b09f46e6be4c81020e8f3678cbab4393412a27e
Date:   Thu Apr 16 20:54:05 2015 +0300

    Rename temporary py27.dll to py27.dll.bak.
    
    Added legacy code for reference in net/Http/sites.google.com/site/prof7bit
    
    Moved source into src/mql4py.

commit 5db0dbe5c20b15cc0eb917cc5a2b65d7638f1997
Date:   Mon Apr 13 18:50:45 2015 +0300

    Put tests into OTMql4PyTest.mq4 Script.
