@@ -28,7 +28,7 @@ bridges Metatrader to Python under Linux.
 For the moment there is no installer: just "git clone" or download the
 zip from github.com and unzip into an empty directory. Then recursively copy
 the folder MQL4 over the MQL4 folder of your Metatrader installation. It will
-not overwrite any system files.
+not overwrite any Mt4 system files.
 
 You already should have the python27.dll and any other Python dlls
 that you will call (e.g. `pythoncom27.dll` `pythoncomloader27.dll` `pywintypes.dll`)
@@ -197,64 +197,3 @@ that any command that you ask Python to execute is accomplished within
 the time it takes to get the next tick: programming with Python iterators
 is probably a good idea. It is untested as to whether
 the Python code dispatched from `OnTick` can block the chart or not.
-## PyZmq
-
-PyZMQ is the official Python binding for the ZeroMQ Messaging Library
-and can be found at https://pypi.python.org/pypi/pyzmq 
-The project's Home Page is at http://github.com/zeromq/pyzmq
-
-It can be used to run a subscriber or publisher from outside of
-Metatrader, to receive or send information. For example, look at
-`OTZmqSubscribe.py` and `OTZmqRequest.py` in the `bin` directory of
-https://github.com/OpenTrading/OTMql4Zmq/
-
-We have used the latest version at the time of writing, but we expect
-that any version will work.
-
-### Installation
-
-If you are running the Python(x,y) distribution, then `pyzmq` is
-already included.
-
-If you have `pip` installed in your Python and are connected to the
-Internet, you can simply run `pip pyzmq`.
-
-Otherwise, download the Python egg:
-https://pypi.python.org/packages/2.7/p/pyzmq/pyzmq-14.5.0-py2.7-win32.egg
-and `easy_install` it into your Python's site-packages directory.
-
-### Running under OTMqlPy
-
-You can call ZeroMQ from the Python running under Mt4; see the file
-`MQL4/Experts/OTMql4/OTPyTestZmqEA.mq4`
-which is a work in progress. Attach that expert advisor to a chart,
-and then in a command console, run
-`python OTZmqSubscribe.py -v 4 tick timer bar`
-The ZeroMQ messages will be sent from Mt4, via Python pyzmq,
-to the pyzmq in OTZmqSubscribe.py.
-
-The **really** nice thing about this is that you can run the Python code
-that you will be running with Mt4 from the command line Python for
-testing and debugging. When it's all working with tests, you then just
-wire up the call into Python from Mt4 as a last step. We have some worries
-about performance, but for the moment, we will just put testing in place.
-
-Run
-`python OTZmqSubscribe.py --help `
-for details on the command-line options. `tick timer bar` says that
-you want to be notified of the tick, timer and bar topics, which
-are defined in the EA code.
-
-This is Mt4 publishing the information that the Python script
-`OTZmqSubscribe.py` subscribes to. We will have the other direction shortly,
-where a Python script requests from Mt4 for things like account
-information and placing orders, using the script `OTZmqRequest.py`.
-
-You can test the code that will be called by Mt4 by going to the
-`OTMqlPy/MQL4/Python/OTMql427/` directory and executing
-`python ZmqChart.py` when you already have started in the background
-an instance of `python OTZmqSubscribe.py -v 4 tick timer bar retval` .
-You should see messages being generated by `ZmqChart` and printed by
-`OTZmqSubscribe`. Make sure that this is working before you try
-using `ZmqChart` from Mt4.
-
