@@ -25,7 +25,7 @@ bridges Metatrader to Python under Linux.
 For the moment there is no installer: just "git clone" or download the
 zip from github.com and unzip into an empty directory. Then recursively copy
 the folder MQL4 over the MQL4 folder of your Metatrader installation. It will
-not overwrite any system files.
+not overwrite any Mt4 system files.
 
 You already should have the python27.dll and any other Python dlls
 that you will call (e.g. `pythoncom27.dll` `pythoncomloader27.dll` `pywintypes.dll`)
